@@ -18,6 +18,7 @@
 
 #include "wx/object.h"
 #include "wx/confbase.h"
+#include "buffer.h"
 
 // ----------------------------------------------------------------------------
 // wxRegConfig
@@ -90,9 +91,11 @@ protected:
   // implement read/write methods
   virtual bool DoReadString(const wxString& key, wxString *pStr) const;
   virtual bool DoReadLong(const wxString& key, long *plResult) const;
+  virtual bool DoReadBinary(const wxString& key, wxMemoryBuffer* buf) const;
 
   virtual bool DoWriteString(const wxString& key, const wxString& szValue);
   virtual bool DoWriteLong(const wxString& key, long lValue);
+  virtual bool DoWriteBinary(const wxString& key, const wxMemoryBuffer& buf);
 
 private:
   // these keys are opened during all lifetime of wxRegConfig object
