@@ -178,6 +178,12 @@ bool wxPrefConfig::DoReadLong(const wxString& key, long *plResult) const
     return false;
 }
 
+bool DoReadBinary(const wxString& key, wxMemoryBuffer *buf) const
+{
+    /* TODO */
+    return false;
+}
+
 bool wxPrefConfig::DoWriteString(const wxString& key, const wxString& szValue)
 {
     /* TODO */
@@ -185,6 +191,12 @@ bool wxPrefConfig::DoWriteString(const wxString& key, const wxString& szValue)
 }
 
 bool wxPrefConfig::DoWriteLong(const wxString& key, long lValue)
+{
+    /* TODO */
+    return false;
+}
+
+bool DoWriteBinary(const wxString& key, const wxMemoryBuffer& buf)
 {
     /* TODO */
     return false;
